# SlicerDeid

./: README.md
deid/: CMakeLists.txt  deid.py  deid.s4ext.txt
deid/deidLib/: dependency_handler.py
