cmake_minimum_required(VERSION 3.16.3...3.19.7 FATAL_ERROR)

project(deidentification)

#-----------------------------------------------------------------------------
# Extension meta-information
set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extensions/deidentification")
set(EXTENSION_CATEGORY "DEID")
set(EXTENSION_CONTRIBUTORS "Anh Tran (Sam Lab)")
set(EXTENSION_DESCRIPTION "remove all identification")
set(EXTENSION_ICONURL "https://www.example.com/Slicer/Extensions/deidentification.png")
set(EXTENSION_SCREENSHOTURLS "https://www.example.com/Slicer/Extensions/deidentification/Screenshots/1.png")
set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies

#-----------------------------------------------------------------------------
# Extension dependencies
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})

#-----------------------------------------------------------------------------
# Extension modules
add_subdirectory(deid)
## NEXT_MODULE

#-----------------------------------------------------------------------------
include(${Slicer_EXTENSION_GENERATE_CONFIG})
include(${Slicer_EXTENSION_CPACK})
